ncc/testsuite/negative/void-parm2.n
module M {
  public Main () : void // OK
  {
    [()].Iter (
      fun (_) { // E: has void argument
      }
    )
  }
}
